NIFI-14654: Ensure when a Stateless Process Group is stopped that we properly call all success and/or failure session callbacks before stopping the Processor. In order to make system tests to verify this more straight-forward, also exposed the CounterRepository such that system tests can obtain counter values to ensure that methods are called appropriately.